--- a/sad-project/package.json
+++ b/sad-project/package.json
@@ -11,6 +11,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
     "cors": "^2.8.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
